--- a/package.json
+++ b/package.json
@@ -1,6 +1,19 @@
 {
+  "name": "my_project",
+  "version": "1.0.0",
+  "description": "A Middleman project with Tailwind CSS",
+  "main": "index.js",
+  "scripts": {
+    "postcss:watch": "postcss source/stylesheets/site.css -o .tmp/stylesheets/site.css --watch",
+    "dev": "concurrently \"yarn postcss:watch\" \"middleman server\""
+  },
+  "author": "",
+  "license": "MIT",
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "postcss": "^8.4.6",
+    "autoprefixer": "^10.4.2",
+    "concurrently": "^7.0.0"
   }
 }
